--- a/demo.html
+++ b/demo.html
@@ -2,116 +2,139 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <script src="js/three.js"></script>
-    <script src="js/controls/TrackballControls.js"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
+  <meta charset="UTF-8">
+  <script src="js/three.js"></script>
+  <script src="js/controls/TrackballControls.js"></script>
+  <style type="text/css">
+    body {
+      margin: 0;
+    }
 
-        div#canvas-frame {
-            border: none;
-            cursor: pointer;
-            width: 100vw;
-            height: 100vh;
-            background-color: #EEEEEE;
-        }
-    </style>
-    <script>
-        let renderer, loop = null, controls;
+    div#canvas-frame {
+      border: none;
+      cursor: pointer;
+      width: 100vw;
+      height: 100vh;
+      background-color: #EEEEEE;
+    }
+  </style>
+  <script>
+    let scene, camera, renderer, controls, loop = null, width, height;
 
-        function start() {
-            initThree();
-            initScene();
-            initCamera();
-            initLight();
-            initObject();
-            animation();
-        }
+    function start() {
+      initThree();
+      initScene();
+      initCamera();
+      initLight();
+      initObject();
+      animation();
+    }
 
-        // 初始化画布
-        function initThree() {
-            width = document.getElementById('canvas-frame').clientWidth;
-            height = document.getElementById('canvas-frame').clientHeight;
-            renderer = new THREE.WebGLRenderer({
-                // true 为反锯齿
-                antialias: true
-            });
-            renderer.setSize(width, height);
-            document.getElementById('canvas-frame').appendChild(renderer.domElement);
-            renderer.setClearColor(0xf5f5f5, 1.0);
-        }
+    // 初始化画布
+    function initThree() {
+      width = document.getElementById('canvas-frame').clientWidth;
+      height = document.getElementById('canvas-frame').clientHeight;
 
-        // 场景
-        let scene;
-        function initScene() {
-            scene = new THREE.Scene();
+      renderer = new THREE.WebGLRenderer({
+        // true 为反锯齿
+        antialias: true
+      });
+      renderer.setSize(width, height);
+      renderer.setClearColor(0xf5f5f5, 1.0);
 
-            // 坐标系
-            let axisHelper = new THREE.AxisHelper(300);
-            scene.add(axisHelper);
-        }
+      // 允许阴影隐射
+      renderer.shadowMap.enabled = true;
+      renderer.shadowMap.type = THREE.PCFSoftShadowMap;
 
-        // 相机 （观察位）
-        let camera;
-        function initCamera() {
-            // 透射投影 角度、横纵比、相机最近能拉大的记录
-            camera = new THREE.PerspectiveCamera(50, width / height, 1, 1000000);
-            camera.position.set(0, 0, 600);
+      document.getElementById('canvas-frame').appendChild(renderer.domElement);
+    }
 
-            controls = new THREE.TrackballControls(camera);
-        }
+    // 场景
+    function initScene() {
+      scene = new THREE.Scene();
+
+      // 坐标系
+      let axisHelper = new THREE.AxisHelper(300);
+      scene.add(axisHelper);
+    }
+
+    // 相机 （观察位）
+    function initCamera() {
+      // 透射投影 角度、横纵比、相机能滚动z轴的极限距离
+      camera = new THREE.PerspectiveCamera(50, width / height, 1, 1000000);
+      camera.position.set(0, 0, 600);
+
+      controls = new THREE.TrackballControls(camera);
+    }
 
 
-        // 光源
-        let light;
-        function initLight() {
-            // 点光源
-            light = new THREE.PointLight(0xffffff);
-            light.position.set(0, 300, 0);
-            scene.add(light);
-        }
+    // 光源
+    let light;
 
-        // 将物体添加进场景
-        function initObject() {
-            // 物体的尺寸 x y z 切片
-            let geometry = new THREE.CylinderGeometry(300, 300, 50, 100, 100, false);
-            // 材质
-            let material = new THREE.MeshLambertMaterial({ color: 0x00FFFF, shininess: 20 });
-            let mesh = new THREE.Mesh(geometry, material);
+    function initLight() {
+      // 聚光灯光源
+      light = new THREE.SpotLight(0xffffff);
+      // 光源位置
+      light.position.set(0, 350, 0);
 
-            // 在画布的位置
-            mesh.position.set(0, -100, -100);
-            scene.add(mesh);
+      light.castShadow = true;
+      light.shadow.camera.near = 2;
+      light.shadow.camera.far = 20;
+      light.shadow.camera.fov = 20;
+      light.shadow.camera.left = -50;
+      light.shadow.camera.right = -50;
+      light.shadow.camera.top = 200;
+      light.shadow.camera.bottom = -100;
+      light.shadow.mapSize.set(1024,1024);
 
-            // 球体 半径100  经纬度细分数50,50
-            let geometryBall = new THREE.SphereGeometry(100, 50, 50);
-            let materialBall = new THREE.MeshLambertMaterial({ color: 0x00FFFF, opacity: 0.5, transparent: true });
-            let mesh2 = new THREE.Mesh(geometryBall, materialBall);
-            
-            mesh2.position.set(0, 100, -100);
-            mesh2.rotation.x = Math.PI * 0.2;
-            mesh2.rotation.y = Math.PI * 0.3;
-            scene.add(mesh2);
-        }
+      // 能看见光源位置
+      let shadowCameraHelper = new THREE.CameraHelper(light.shadow.camera);
 
-        // 动画
-        function animation() {
-            // renderer.clear();
-            camera.position.x += 0.5;
-            camera.position.z -= 0.5;
+      scene.add(shadowCameraHelper);
+      scene.add(light);
+    }
 
-            // 动画帧
-            loop = requestAnimationFrame(animation);
-            renderer.render(scene, camera);
-            controls.update();
-        }
-    </script>
+    // 将物体添加进场景
+    function initObject() {
+      // 物体的尺寸 x y z 切片
+      let geometry = new THREE.CylinderGeometry(300, 300, 50, 100, 100, false);
+      // 材质
+      let material = new THREE.MeshLambertMaterial({color: 0x00FFFF, shininess: 20});
+      let mesh = new THREE.Mesh(geometry, material);
+
+      // 在画布的位置
+      mesh.position.set(0, -100, -100);
+      mesh.receiveShadow = true;
+      scene.add(mesh);
+
+      // 球体 半径100  经纬度细分数50,50
+      let geometryBall = new THREE.SphereGeometry(100, 50, 50);
+      let materialBall = new THREE.MeshLambertMaterial({color: 0x00FFFF, opacity: 0.8, transparent: true});
+      let mesh2 = new THREE.Mesh(geometryBall, materialBall);
+
+      mesh2.position.set(0, 100, -100);
+      mesh2.rotation.x = Math.PI * 0.2;
+      mesh2.rotation.y = Math.PI * 0.3;
+      mesh2.castShadow = true;
+      scene.add(mesh2);
+    }
+
+    // 动画
+    function animation() {
+      // renderer.clear();
+      camera.position.x += 0.5;
+      camera.position.z -= 0.5;
+
+      // 动画帧
+      loop = requestAnimationFrame(animation);
+      renderer.render(scene, camera);
+      controls.update();
+    }
+  </script>
 </head>
 
 <body onload="start();">
-    <div id="canvas-frame"></div>
+<div id="canvas-frame"></div>
 </body>
 
 </html>
