--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <script src="js/three.js"></script>
-  <script src="js/controls/TrackballControls.js"></script>
+  <script src="js/TrackballControls.js"></script>
   <style type="text/css">
     body {
       margin: 0;
